bk_ida/gobmkida/c2/new_position
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/new_position/src/engine/board.c:3215:13: error: subscripted value is not an array, pointer, or vector
liberty_mark[0] = 0; 
~~~~~~~~~~~~^~
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/new_position/src/engine/board.c:3228:13: error: subscripted value is not an array, pointer, or vector
liberty_mark[i] = -1; 
~~~~~~~~~~~~^~
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/new_position/src/engine/board.c:3252:18: error: subscripted value is not an array, pointer, or vector
v6 = liberty_mark[0]; 
     ~~~~~~~~~~~~^~
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/new_position/src/engine/board.c:3288:29: error: use of undeclared identifier 'dword_A7D19C'
if ( byte_9B389F[origin] || dword_A7D19C[origin] == v6 ) 
                            ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/new_position/src/engine/board.c:3288:6: error: use of undeclared identifier 'byte_9B389F'
if ( byte_9B389F[origin] || dword_A7D19C[origin] == v6 ) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/new_position/src/engine/board.c:3290:30: error: use of undeclared identifier 'byte_9B389F'
if ( v9 == ( unsigned __int8)byte_9B389F[origin] ) 
                             ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/new_position/src/engine/board.c:3311:1: error: use of undeclared identifier 'dword_A7D19C'
dword_A7D19C[origin] = v6; 
^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/new_position/src/engine/board.c:3313:6: error: use of undeclared identifier 'byte_9B388C'
if ( byte_9B388C[origin] || string_number[origin + 384] == v6 ) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/new_position/src/engine/board.c:3315:30: error: use of undeclared identifier 'byte_9B388C'
if ( v9 == ( unsigned __int8)byte_9B388C[origin] ) 
                             ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/new_position/src/engine/board.c:3367:13: error: subscripted value is not an array, pointer, or vector
liberty_mark[0] = v6; 
~~~~~~~~~~~~^~
10 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/new_position/src/obj/1/board.o] Error 1
